Alunos: Matheus Debtil e Carlos Eduardo Stachissini

--- a/LgF_Carlos_Stachissini_Matheus_Debtil.ipynb
+++ b/LgF_Carlos_Stachissini_Matheus_Debtil.ipynb
@@ -120,6 +120,8 @@
         "import pandas as pd \n",
         "import numpy as np\n",
         "\n",
+        "#alunos: Carlos Eduardo Stachissini e Matheus Debtil\n",
+        "\n",
         "# Variáveis ​​Linguisticas. Termos Linguisticos \n",
         "score_mercado = ctrl.Antecedent (np.arange (0, 1001, 1), 'score_mercado') \n",
         "score_interno = ctrl.Antecedent (np.arange (0, 1001, 1), 'score_interno') \n",
